# Pyoffline2

./: .gitignore  README.md  build.py  cli.py  old_start.py  pyproject.toml  start.py
config/: __init__.py  schemas.py
docs/: habr_public.md  linux_install.md  linux_use_case.md  linux_variable_path.md  tree_instruction.md  win_install.md  win_use_case.md  win_variable_path.md
functions/: get_orphan_deps.py  packages_fn.py  python_fn.py  subprocess_wrapper.py  toml_manager.py
layers/archive_manager/: main.py
layers/directory_walker/: __init__.py  main.py
layers/pack_installer/: main.py
layers/python_manager/: main.py  start.py
tests/: test_archive_packages.py  test_init_project.py  test_python.py
