[project]
name = "pyoffline2"
version = "0.1.0"
description = "Packages "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "packaging>=26.2",
    "requests>=2.34.2",
    "wheel-filename>=2.1.0",
    "typer>=0.26.7",
    "pyinstaller>=6.21.0",
    "getpybs>=0.1.0",
    "tomli-w>=1.2.0",
    "jinja2>=3.1.6",
    "pytest>=9.1.0",
    "infrastructure",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    "resources",
    ".venv",
    "releases",
]
pythonpath = [
    ".",
]
markers = []

[tool.uv.sources.infrastructure]
git = "https://github.com/Mike2024New/infrastructure.git"
